--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "next": "15.5.9",
@@ -53,12 +55,14 @@
     "react-confetti": "^6.1.0",
     "react-day-picker": "^9.11.3",
     "react-dom": "^19.2.1",
+    "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@types/node": "^20.19.28",
