--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
